--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,39 +1,25 @@
-name: Generate Snake Animation
+name: Generate Pacman Animation
 
 on:
-  # Run automatically every 24 hours
   schedule:
-    - cron: "0 0 * * *"
-  
-  # Allows you to run this workflow manually from the Actions tab
+    - cron: '0 0 * * *'  # jalan tiap hari jam 00:00 UTC
   workflow_dispatch:
-  
-  # Run on every push to the repository
-  push:
-    branches:
-    - main
 
 jobs:
   generate:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-    
     steps:
-      # Checkout the repository
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Generate the snake animation
-      - name: Generate Snake
-        uses: Platane/snk/svg-only@v3
+      - name: Generate Pacman Animation
+        uses: Platane/platane@pacman
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-pacman.svg
 
-      # Commit and push the generated files
-      - name: Push generated files
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
