Fix GitHub Action Pacman workflow with correct module

--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,9 +1,8 @@
- 
 name: Generate Pacman
 
 on:
   schedule:
-    - cron: "0 0 * * *" 
+    - cron: "0 0 * * *"
   workflow_dispatch:
   push:
     branches:
@@ -20,17 +19,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install canvas module
-        run: |
-          npm install canvas
-
       - name: Generate github-contribution-grid-pacman.svg
-        uses: Platane/snk/svg-only@v3
+        uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
